# flight-deal-monitor

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.html  CODE_REVIEW.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docs.html  index.html  pyproject.toml  requirements.txt
.lean-ctx/: graph.meta.json
.playwright-mcp/: page-2026-06-20T21-27-07-971Z.yml  page-2026-06-20T21-34-50-373Z.yml  page-2026-06-20T23-22-40-825Z.yml  page-2026-06-21T17-45-52-444Z.yml  page-2026-06-21T20-39-58-145Z.yml  page-2026-06-21T20-40-01-853Z.yml  page-2026-06-21T20-41-20-629Z.yml  page-2026-06-21T20-42-09-713Z.yml  page-2026-06-21T20-42-18-994Z.yml  page-2026-06-21T20-58-34-153Z.yml  page-2026-06-21T23-08-56-351Z.yml  page-2026-06-21T23-09-21-508Z.yml  page-2026-06-21T23-09-30-015Z.yml  page-2026-06-21T23-09-56-978Z.yml  page-2026-06-21T23-12-27-746Z.yml  page-2026-06-21T23-14-57-156Z.yml  page-2026-06-21T23-16-50-844Z.yml  page-2026-06-21T23-17-06-548Z.yml
alembic/: env.py
app/: __init__.py  __init__.py,cover  alert.py  alert.py,cover  alert_dispatch.py  auth.py  bot.py  cache.py  cache.py,cover  config.py  config.py,cover  database.py  database.py,cover  job_lifecycle.py  main.py  main.py,cover  round_trip.py  scanner.py  scheduler.py  scheduler.py,cover  scheduler_jobs.py  scheduler_jobs.py,cover
config/: .env.example  app.yaml
docs/: FEATURES.md  FREE_FLIGHT_APIS.md  MEMORY.md  handoff.md  panel-decisions.md  plan-next-3.md  sqlite-prod-audit.md
scripts/: dogfood_rt.py  imp_check.py  run_pytest.py  run_tests.py
tasks/: lessons.md  next-features.md  roadmap.md  todo.md
tests/: __init__.py  (+40 more)
(+68 files in other folders)
