[tool.poetry]
name = "flight-deal-monitor"
version = "1.0.0"
description = "Automated flight deal monitoring and alerting system"
authors = ["Josh <josh@bigknoxy.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlmodel = "^0.0.14"
httpx = "^0.25.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
apscheduler = "^3.10.4"
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
responses = "^0.24.1"
black = "^23.12.1"
ruff = "^0.1.8"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/scrapers/agent_browser.py",
    "app/scrapers/browser_search.py",
    "app/scrapers/flight_browser.py",
    "app/scrapers/flight_search.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true